# tsfm-playground

./: .gitignore  DESIGN.md  README.md  pyproject.toml
configs/: chronos2-local.yaml  default.yaml
scripts/: run_server.sh
src/tsfm_playground/: __init__.py  app.py  backends.py  config.py  forecast.py  schemas.py  sessions.py  ts_parsing.py
src/tsfm_playground/static/: app.css  app.js  forecast_utils.js  index.html  theme_utils.js
tests/: conftest.py  test_api.py  test_backends.py  test_config.py  test_ts_parsing.py
tests_js/: forecast_utils.test.js
