[project]
name = "tsfm-playground"
version = "0.1.0"
description = "Interactive playground for time-series foundation model forecasting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
chronos2 = [
    "chronos-forecasting>=2.2.2",
    "pandas[pyarrow]>=2.2",
]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
tsfm-playground = "tsfm_playground.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsfm_playground"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
